# dial

./: README.md  main.py  pyproject.toml
core/: attention_phase.py  cue_phase.py  cycle_runner.py
dial/: __init__.py  __main__.py  attention_phase.py  cffp_schema.py  cue_phase.py  cycle_runner.py  hep_schema.py  prompts.py  residual_stream.py
dial/schemas/: __init__.py  cffp_schema.py  hep_schema.py
dial/tests/: test_cases.yaml  test_cffp.py  test_hep.py  test_phase3_calibration.py
prompts/: cffp_attention.txt  hep_attention.txt
schemas/: hep_schema.py
tests/: test_cffp.py  test_hep.py
