[project]
name = "dial"                          # matches uvx --from git+... dial
dependencies = ["requests", "pyyaml", "python-dotenv"]  # only what's needed

[project.scripts]
dial = "dial.__main__:main"            # uvx finds this automatically

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dial"]                    # tells hatchling what to include