[project]
name = "dial"
version = "0.1.0"
description = "Dialectics MVP — Local Reasoning Engine on 8B models (HEP + CFFP protocols)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dial = "dial.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dial"]

[tool.pytest.ini_options]
testpaths = ["dial/tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
